# raytracer

./: CImg.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  Image.cpp  Image.h  IndexObjLoader.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Plane.cpp  Plane.h  README.md  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  main.cpp
